@@ -6,7 +6,7 @@ buildscript {
       url 'http://repo.spring.io/plugins-release'
     }
   }
-  
+
   dependencies {
     classpath group: 'org.gradle.api.plugins', name: 'gradle-cargo-plugin', version: '1.5'
     classpath group: 'org.jfrog.buildinfo', name: 'build-info-extractor-gradle', version: '2.2.4'
@@ -49,7 +49,7 @@ allprojects {
   apply plugin: 'propdeps-eclipse'
   configurations.provided.transitive = false
   apply plugin: 'eclipse-wtp'
-  
+
   repositories {
     mavenCentral()
   }
@@ -72,10 +72,15 @@ allprojects {
 
 subprojects {
   apply plugin: 'java'
+  [compileJava, compileTestJava]*.options*.compilerArgs = ['-Xlint:none']
   sourceCompatibility = 1.7
   targetCompatibility = 1.7
+  test {
+    jvmArgs += [ "-XX:MaxPermSize=512m", "-Xmx2048m" ]
+  }
 
-  task packageSources(type: Jar) {
+
+    task packageSources(type: Jar) {
     classifier = 'sources'
     from sourceSets.main.allSource
 
@@ -94,7 +99,6 @@ subprojects {
 
   artifactoryPublish {
     publish {
-      skip = rootProject.name.equals('cloudfoundry-login-server')
       contextUrl = "http://repo.spring.io"
       repository {
         repoKey = version.endsWith('-SNAPSHOT') ? 'libs-snapshot-local' : 'libs-release-local'
@@ -158,6 +162,8 @@ flyway {
   }
 }
 
+flywayClean.enabled = Boolean.valueOf(System.getProperty("flyway.clean", "true"))
+
 task prepareDatabase {
   dependsOn { databaseType().equals('hsqldb') ? null : flywayClean }
 }
@@ -197,6 +203,7 @@ cargo {
   local {
     systemProperties {
       property 'net.sourceforge.cobertura.datafile', integrationCoverageFile
+      property 'spring.profiles.active', System.getProperty('spring.profiles.active', 'default')
     }
 
     installer {
@@ -219,6 +226,8 @@ project.gradle.taskGraph.whenReady { TaskExecutionGraph graph ->
     }
 
     local {
+//      jvmArgs = "-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005"
+
       if (runningWithCoverage()) {
         extraClasspath = files(configurations.coberturaJar.files)
       }
@@ -264,3 +273,104 @@ cobertura {
 
 assemble.dependsOn subprojects.assemble
 test.dependsOn subprojects.test
+
+// Log timings per task.
+class TimingsListener implements TaskExecutionListener, BuildListener, org.gradle.api.tasks.testing.TestListener {
+  private Clock clock
+  private Clock testClock;
+  private int beforeCount;
+  private timings = []
+  private testTimings = []
+  private final testLimit = 5000
+  private Task currentTask
+
+  @Override
+  void beforeExecute(Task task) {
+    clock = new org.gradle.util.Clock()
+    currentTask = task
+  }
+
+  @Override
+  void afterExecute(Task task, TaskState taskState) {
+    def ms = clock.timeInMs
+    timings.add([ms, task.path])
+    task.project.logger.warn "${task.path} took ${ms}ms"
+  }
+
+  @Override
+  void buildFinished(BuildResult result) {
+    println "Task timings:"
+    for (timing in timings) {
+      if (timing[0] >= 500) {
+        printf "%7sms  %s\n", timing
+      }
+    }
+    println "Test timings:"
+    for (timing in testTimings.sort { it[0] }) {
+      if (timing[0] >= testLimit) {
+        printf "%7sms  %s\n", timing
+      }
+    }
+  }
+
+  @Override
+  public void beforeSuite(TestDescriptor suite) {
+    testClock = new org.gradle.util.Clock()
+//    beforeCount = checkConnections("Before",suite);
+  }
+
+  @Override
+  public void afterSuite(TestDescriptor suite, TestResult result) {
+    def ms = testClock.timeInMs
+    testTimings.add([ms, suite.getName()])
+    currentTask.project.logger.warn "${suite.name} took ${ms}ms"
+//    int afterCount = checkConnections("After",suite);
+//    if (afterCount > beforeCount && beforeCount >= 0 ) {
+//      System.err.println("Connection leak["+suite.getName()+"]:"+afterCount);
+//    }
+  }
+
+  public int checkConnections(String action, TestDescriptor suite) {
+    java.sql.Connection con = null;
+    int count = -1;
+    try {
+      java.sql.Driver driver = Class.forName("org.postgresql.Driver").newInstance();
+      java.util.Properties p = new java.util.Properties();
+      p.setProperty("user","root");
+      p.setProperty("password","changeme");
+      con = driver.connect("jdbc:postgresql:uaa", p);
+      java.sql.Statement st = con.createStatement();
+      java.sql.ResultSet rs = st.executeQuery("select count(*) from pg_stat_activity");
+      rs.next();
+      count = rs.getInt(1);
+      System.err.println(action+" Connection count["+suite.getName()+"] is: "+count);
+    } finally {
+      if (con!=null) {
+        try { con.close();} catch (Exception ignore) {}
+      }
+    }
+    return count;
+  }
+
+  @Override
+  public void beforeTest(TestDescriptor test) {}
+
+  @Override
+  public void afterTest(TestDescriptor test, TestResult result) {}
+
+  @Override
+  void buildStarted(Gradle gradle) {}
+
+  @Override
+  void projectsEvaluated(Gradle gradle) {}
+
+  @Override
+  void projectsLoaded(Gradle gradle) {}
+
+  @Override
+  void settingsEvaluated(Settings settings) {}
+
+
+}
+
+gradle.addListener new TimingsListener()
